--- a/nb03xx_Plotting/nb0331_interactive_parabola_plot_integral.ipynb
+++ b/nb03xx_Plotting/nb0331_interactive_parabola_plot_integral.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "65d26cd9-d877-490d-822d-4e25a947d1d3",
    "metadata": {},
    "outputs": [],
@@ -54,13 +54,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "8dd71265-d5b4-4839-bb4a-46e8921f8721",
    "metadata": {},
    "outputs": [],
    "source": [
     "def f(x, x0=0, y0=0, C=1):\n",
     "    return C*(x-x0)**2 + y0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "73eef36e-5d94-42e7-8a28-5f4918f2f79c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 2., 3., 4., 5.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(0,5.001)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "73e6347a-d742-4f74-b9cb-90ae61063414",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100., 101., 104., 109., 116., 125.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(x,y0=100)"
    ]
   },
   {
@@ -80,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "eab731f1-eb46-46f9-823b-b847b169f611",
    "metadata": {},
    "outputs": [],
@@ -90,22 +133,22 @@
     "    if x0 == 0:\n",
     "        s1 = f\"x^2\"\n",
     "    elif x0 > 0:\n",
-    "        s1 = f\"(x-{x0})^2\"\n",
+    "        s1 = f\"(x-{x0:.1f})^2\"\n",
     "    else:\n",
-    "        s1 = f\"(x+{abs(x0)})^2\"\n",
+    "        s1 = f\"(x+{abs(x0):.1f})^2\"\n",
     "        \n",
     "    if y0 == 0:\n",
     "        s2 = \"\"\n",
     "    else:\n",
-    "        s2 = f\" + {y0}\"\n",
+    "        s2 = f\" + {y0:.1f}\"\n",
     "        \n",
     "    if c == 1:\n",
     "        s0 = \"\"\n",
     "    else:\n",
-    "        s0 = f\"{c}\"\n",
+    "        s0 = f\"{c:.1f}\"\n",
     "    \n",
     "    if c == 0:\n",
-    "        s = f\"$f(x) = {y0}$\"\n",
+    "        s = f\"$f(x) = {y0:.1f}$\"\n",
     "    else:    \n",
     "        s = f\"$f(x) = \" + s0 + s1 + s2 + \"$\"\n",
     "\n",
@@ -114,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ea6cdea9-2f51-4b07-85c7-d6e0e8fb7bb3",
    "metadata": {},
    "outputs": [
@@ -122,10 +165,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$f(x) = 2$\n",
-      "$f(x) = x^2 + 2$\n",
-      "$f(x) = 0.5x^2 + 2$\n",
-      "$f(x) = 0.5(x-2)^2 + 2$\n"
+      "$f(x) = 2.0$\n",
+      "$f(x) = x^2 + 2.0$\n",
+      "$f(x) = 0.5x^2 + 2.0$\n",
+      "$f(x) = 0.5(x-2.0)^2 + 2.0$\n"
      ]
     }
    ],
@@ -139,24 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "1234ab02-9c70-40b0-b133-9a17678322e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create mathjax text to render the integral formula\n",
     "def myinttext(a=0, b=1, I=0, n=3):\n",
-    "    sa = f\"{a}\"\n",
-    "    sb = f\"{b}\"\n",
+    "    sa = f\"{a:.1f}\"\n",
+    "    sb = f\"{b:.1f}\"\n",
     "        \n",
-    "    s = r\"$\\int_{\" + sa + \"}^{\" + sb + \"} f(x)dx = \" + f\"{I:.{n}g}$\"\n",
+    "    s = r\"$\\int_{\" + sa + \"}^{\" + sb + \"} f(x)dx = \" + f\"{I:.{n}f}$\"\n",
     "    \n",
     "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "3a5c78d4-b10e-4915-a91a-c70c9b221b8f",
    "metadata": {},
    "outputs": [
@@ -164,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$\\int_{0}^{4} f(x)dx = 5.33$\n"
+      "$\\int_{0.0}^{4.0} f(x)dx = 5.333$\n"
      ]
     }
    ],
@@ -175,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "d005061f-b246-488a-a3b4-081c3480f76c",
    "metadata": {},
    "outputs": [],
@@ -225,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "9f1d581e-feb4-4b01-893a-41f87f1b2931",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a9f575ca7074936ad4a9e99c66688de",
+       "model_id": "802e759ca1da4ad591ab93da070a21d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,8 +283,9 @@
        "interactive(children=(FloatSlider(value=0.0, description='x0', max=4.0, min=-4.0), FloatSlider(value=0.0, desc…"
       ]
      },
+     "execution_count": 31,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,6 +310,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b0807b6-ecff-4d51-969c-384486a52e42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -284,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
